# Racognition

./: AUTHORS  CODE_OF_CONDUCT.md  README.md  SECURITY.md
C++/: run.sh
C++/conf/: CMakeLists.txt
C++/include/: FaceRecognizer.hpp
C++/src/: FaceRecognizer.cpp  main.cpp
Imgs/: logo.avif
Python/: face_recognise.py  face_recognise_ino.py  face_trainer.py  requirements.txt
